<resources>
    <string name="app_name">SurveyApp</string>
    <string name="verify_access">Verifying Access…</string>
    <string name="invalid_access">Invalid Access</string>
    <string name="invalid_access_description">Please request access in order to use this App.</string>
    <string name="action_retry">Retry</string>
    <string name="action_exit_app">Exit</string>
    <string name="action_close">Close</string>
    <string name="survey_start">Start</string>
    <string name="survey_next_question">Next</string>
    <string name="survey_skip_question">Skip</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_hint">Type your answer…</string>
    <string name="logo_description">Logo of the App</string>
    <string name="register_access">Registering…</string>
    <string name="register_failed">Registration failed</string>
    <string name="register_failed_description">Please request access again or retry to register later.</string>
    <string name="error_send_answer">Unable to send answer to the server.</string>
    <string name="error_receive_survey">Unable to receive survey from server.</string>
    <string name="load_survey_failed">Failed to load survey</string>
    <string name="try_again">Please try again later.</string>
    <string name="answer_required">Answer required</string>
    <string name="default_notification_channel_id">test</string>
    <string name="steps_permission_rationale">Activity recognition is required to track weekly step count.</string>
    <string name="progress_survey">In progress</string>
    <string name="completed_survey">Completed</string>
    <string name="new_survey">New</string>
    <string name="notification_default_channel_id" translatable="false">SURVEY_CHANNEL</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="about">About</string>
    <string name="expiration1"> Expires in: %1$d days %2$d hours %3$d min</string>
    <string name="expiration2"> Expires in: %1$d hours %2$d min</string>
    <string name="expiration3"> Expires in: %1$d min</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="button_ok">OK</string>
    <string name="about_us">About us</string>
    <string name="thank_you">Thank you for completing the \n %1$s survey!</string>
    <string name="continue_survey">Continue</string>
    <string name="close_text">Close</string>
    <string name="retake_survey">retake</string>
    <string name="error_connection">Connection error, check your internet settings!</string>
    <string name="error_unregister">Registration has expired, register again</string>
    <string name="error_not_found">Survey has expired</string>
    <string name="error_server_internal">\"Internal server error, retry later \"</string>
    <string name="error_server_other">Server error, update application or retry later</string>
    <string name="error_application">\"Application error, update or reset application \"</string>
    <string name="agree_terms_conditions">I agree with the Terms and Conditions</string>
    <string name="agree_privacy_policy">I agree with the Privacy Policy</string>
    <string name="content_description_success">Success icon</string>
    <string name="button_cancel">Cancel</string>
    <string name="answer_too_large">Your response exceed the characters limit</string>
</resources>
